# raycast-extensions

./: README.md
.github/: CODEOWNERS  extensionName2Folder.json  raycast2github.json
.github/workflows/: generate-docs.yml  pull_request_merge.yml  stale.yml  sync-api-docs.yml
extensions/0x0/: CHANGELOG.md  README.md  package-lock.json  package.json
extensions/aliyun-oss/: package-lock.json
extensions/antigravity/: CHANGELOG.md  package.json
extensions/app-store-connect/: package-lock.json
extensions/app-tag-manager/: CHANGELOG.md  package-lock.json  package.json
extensions/apple-notes/: package.json
extensions/apple-reminders/: CHANGELOG.md  package.json
extensions/arc-helper/: CHANGELOG.md  README.md  package.json
extensions/area-code-lookup/: CHANGELOG.md  CLAUDE.md  package-lock.json  package.json  tsconfig.json
extensions/azure-icons/: package-lock.json
extensions/background-sounds/: package-lock.json
extensions/battery-menubar/: CHANGELOG.md  package.json
extensions/bear/: package.json
extensions/bitly-url-shortener/: CHANGELOG.md  README.md  package-lock.json  package.json
extensions/bitwarden/: CHANGELOG.md  package-lock.json  package.json
extensions/bmrks/: CHANGELOG.md  package-lock.json  package.json
extensions/brand-dev/: package-lock.json
extensions/brave/: CHANGELOG.md  package.json
extensions/brave-search-with-results/: package-lock.json
extensions/brew/: CHANGELOG.md
extensions/browser-history/: package-lock.json
extensions/raycast-wallpaper/rust/: Cargo.toml
extensions/raycast-wallpaper/rust/src/: main.rs
(+1194 files in other folders)
